--- a/static/style.css
+++ b/static/style.css
@@ -84,3 +84,7 @@ td:nth-child(3) {
   font-size: 12px;
   word-break: break-all; /* Break long hashes onto the next line */
 }
+
+tr.tampered td:first-child::after {
+  content: "                      ⚠️";
+}
